# tem

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: foundation_module_system.base64
docs/: foundation.md  initial_spec.md  migration_state_machine.md  tem.md
docs/assets/: foundation_module_system.base64  foundation_overview.base64  validation_overview.base64
spec/: README.md  initial_spec.md  main.tex
spec/sections/: appendix.tex  architecture.tex  fork_awareness.tex  foundation_layer.tex  frost_challenge.tex  introduction.tex  pool_management.tex  risk_assessment.tex  two_tier_federations.tex
src/: lib.rs
src/foundation/: mod.rs  proof.rs
src/foundation/commitment/: atomic.rs  botanix.rs  entry.rs  fat_db.rs  mem_db.rs  mod.rs  node_codec.rs  sorted.rs  storage.rs  trie.rs
src/foundation/component/: mod.rs  pegout.rs
src/foundation/tests/: botanix.rs  foundation.rs  foundation_interface.rs  header_finalize.rs  insert_proposal.rs  mod.rs  register_transaction.rs  trie.rs
src/primitives/: mod.rs  rlp_impls.rs
src/structs/: block_tree.rs  merkle_patricia.rs  merkle_simple.rs  mod.rs
src/validation/: bitcoin.rs  botanix.rs  mod.rs  pegout.rs  tendermint.rs
src/validation/cometbft_test_data/: commit_height=672580.json  commit_height=672581.json  commit_height=757434.json  validators_height=672580.json
