[package]
name = "botanix-tee"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
# TODO: Need this if we use alloy?
sha2 = "0.10.9"
tendermint = { version = "0.40.4", features = ["secp256k1"] }
# TODO: Need this if we use `tendermint`?
tendermint-light-client-verifier = "0.40.4"
alloy-trie = "0.9.0"
alloy-rlp = "0.3.12"
alloy-primitives = "1.2.1"
alloy-sol-types = "1.2.1"
serde = "1.0.219"
serde_json = "1.0.140"
bitcoin = "0.32.6"
lazy_static = "1.5.0"

[dev-dependencies]
rand = "0.9.1"
