[package]
name = "botanix-tem"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
bitcoin = { version = "0.32.6", features = ["serde"]}
lazy_static = "1.5.0"
sha2 = "0.10.9"

# CometBFT functionality
tendermint = { version = "0.40.4", features = ["secp256k1"] }
tendermint-light-client-verifier = "0.40.4"

# Ethereum functionality
alloy-trie = "0.9.0"
alloy-rlp = "0.3.10"
alloy-primitives = "1.2.1"
alloy-sol-types = "1.2.1"

# Trie implementation
trie-db = { git = "https://github.com/paritytech/trie.git", branch = "master"}
hash-db = { git = "https://github.com/paritytech/trie.git", branch = "master"}
memory-db = { git = "https://github.com/paritytech/trie.git", branch = "master"}
codec = { version = "3.7.5", package = "parity-scale-codec" }

# Only required for `test_utils` module.
rand = "0.9.1"
